--- a/src/main/resources/templates/User/allUsers.html
+++ b/src/main/resources/templates/User/allUsers.html
@@ -31,15 +31,11 @@
                         class="glyphicon glyphicon-home"></i></a></li>
                 <!--                <li><a href="#">Ссылка</a></li>-->
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Навигация<b class="caret"></b></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">Действие</a></li>
-                        <li><a href="#">Другое действие</a></li>
-                        <li><a href="#">Что-то еще</a></li>
+                        <li><a th:href="@{/companies}">Все компании</a></li>
                         <li class="divider"></li>
-                        <li><a href="#">Отдельная ссылка</a></li>
-                        <li class="divider"></li>
-                        <li><a href="#">Еще одна отдельная ссылка</a></li>
+                        <li><a th:href="@{/users}">Все пользователи</a></li>
                     </ul>
                 </li>
             </ul>
@@ -68,19 +64,19 @@
         <thead>
         <tr>
             <div class="col-md-1" style="background-color: #dff0d8; border-bottom: black">
-               Id
+                Id
             </div>
             <div class="col-md-3" style="background-color: #dff0d8">
                 Имя пользователя
             </div>
             <div class="col-md-2" style="background-color: #dff0d8">
-               Компания
+                Компания
             </div>
             <div class="col-md-2" style="background-color: #dff0d8">
-              Телефон пользователя
+                Телефон пользователя
             </div>
             <div class="col-md-2" style="background-color: #dff0d8">
-               Профессия пользователя
+                Профессия пользователя
             </div>
             <div class="col-md-2" style="background-color: #dff0d8">
                 Email пользователя
