--- a/src/main/resources/templates/User/newUser.html
+++ b/src/main/resources/templates/User/newUser.html
@@ -31,15 +31,11 @@
                 <li><a th:href="@{/users}"><i
                         class="glyphicon glyphicon-home"></i></a></li>
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Навигация<b class="caret"></b></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">Действие</a></li>
-                        <li><a href="#">Другое действие</a></li>
-                        <li><a href="#">Что-то еще</a></li>
+                        <li><a th:href="@{/companies}">Все компании</a></li>
                         <li class="divider"></li>
-                        <li><a href="#">Отдельная ссылка</a></li>
-                        <li class="divider"></li>
-                        <li><a href="#">Еще одна отдельная ссылка</a></li>
+                        <li><a th:href="@{/users}">Все пользователи</a></li>
                     </ul>
                 </li>
             </ul>
@@ -85,10 +81,16 @@
             <tr>
                 <td>Компания</td>
                 <td>
-                    <label for="userCompany"></label>
-                    <input type="text" th:field="*{userCompany}" id="userCompany">
-                    <div style="color:red" th:if="${#fields.hasErrors('userCompany')}" th:errors="*{userCompany}">
-                        userCompany Errors
+                    <div>
+                        <select name="category" id="category" th:field="*{userCompany}">
+                            <div th:each="company: ${allCompanies}">
+                                <option th:text="${company.getCompanyName()}" th:value="${company.getCompanyName()}">
+                                    Company
+                                </option>
+                            </div>
+                        </select>
+                        <a href="/companies/new"><i
+                                class="glyphicon glyphicon-plus"></i></a>
                     </div>
                 </td>
 
@@ -171,7 +173,8 @@
 
         </table>
         <div>
-            <input class="btn btn-success button-md btn-block" value="Сохранить изменения" data-toggle="modal" data-target="#myModalAccept">
+            <input class="btn btn-success button-md btn-block" value="Сохранить изменения" data-toggle="modal"
+                   data-target="#myModalAccept">
             <div id="myModalAccept" class="modal fade" tabindex="-1">
                 <div class="modal-dialog modal-sm">
                     <div class="modal-content">
