--- a/src/main/resources/templates/Record/allRecords.html
+++ b/src/main/resources/templates/Record/allRecords.html
@@ -60,9 +60,13 @@
 </nav>
 <br>
 <div class="container">
-     <table class="table table-bordered table-hover table-sm">
+    <table class="table table-bordered table-hover table-sm">
         <thead>
         <tr>
+            <div class="col-md-1" style="background-color: #dff0d8">
+                <th style="border: 1px solid grey; background-color: #dff0d8">
+                </th>
+            </div>
             <div class="col-md-1" style="background-color: #dff0d8; border-bottom: black">
                 <th style="border: 1px solid grey; background-color: #dff0d8">
                     Время
@@ -73,12 +77,7 @@
                     Имя клиента
                 </th>
             </div>
-            <div class="col-md-2" style="background-color: #dff0d8">
-                <th style="border: 1px solid grey; background-color: #dff0d8">
-                    Скидка
-                </th>
-            </div>
-            <div class="col-md-2" style="background-color: #dff0d8">
+            <div class="col-md-3" style="background-color: #dff0d8">
                 <th style="border: 1px solid grey; background-color: #dff0d8">
                     Название процедуры
                 </th>
@@ -98,54 +97,50 @@
         <tbody class="table-group-divider">
         <div th:each="line, iterStat: ${allLines}">
             <tr th:style="${iterStat.odd}?'background:#EEEEEE':'background:#FFFFFF'">
-                <div class="col-md-1">
-                    <div>
-                        <td style="border: 1px solid grey">
-                            <a href="#"
-                               th:text="${line.getTime()}">Time</a></td>
+                <form th:method="POST" th:action="@{/records/user/{userId} (userId = ${line.userId})}">
+                    <div class="col-md-1">
+                        <div>
+                            <td style="border: 1px solid grey">
+                               <button class="btn btn-success btn-sm" type="submit">Записать</button>
+                            </td>
+                        </div>
                     </div>
-                </div>
-                <div class="col-md-3">
-                    <div>
-                        <td style="border: 1px solid grey">
-                            <form th:method="POST" th:action="@{/records/user/{userId} (userId = ${line.userId})}">
-                            <input type="text" name="clientName" value="James Carrot" th:value="${line.clientName}" />
-<!--                            <a href="#"-->
-<!--                               th:text="${line.getClientName()}">Client Name</a></td>-->
-                            </form>
+                    <div class="col-md-1">
+                        <div>
+                            <td style="border: 1px solid grey">
+                                <input class="form-control transparent-input" type="text" name="time" th:value="${line.time}"/>
+                        </div>
                     </div>
-                </div>
-                <div class="col-md-2">
-                    <div>
-                        <td style="border: 1px solid grey">
-                            <a href="#" th:text="${line.getClientName()}">Discount</a>
-                        </td>
+                    <div class="col-md-3">
+                        <div>
+                            <td style="border: 1px solid grey">
+
+                                <input class="form-control transparent-input" type="text" name="clientName" th:value="${line.clientName}"/>
+                        </div>
                     </div>
-                </div>
-                <div class="col-md-2">
-                    <div>
-                        <td style="border: 1px solid grey">
-                            <a href="#"
-                               th:text="${line.getProcedureName()}">Procedure Name</a>
-                        </td>
+                    <div class="col-md-3">
+                        <div>
+                            <td style="border: 1px solid grey">
+                                <input class="form-control transparent-input" type="text" name="procedureName" th:value="${line.procedureName}"/>
+                            </td>
+                        </div>
                     </div>
-                </div>
-                <div class="col-md-2">
-                    <div>
-                        <td style="border: 1px solid grey">
-                            <a href="#"
-                               th:text="${line.getProcedureCost()}">Procedure Cost</a>
-                        </td>
+                    <div class="col-md-2">
+                        <div>
+                            <td style="border: 1px solid grey">
+                                <input class="form-control transparent-input" type="text" name="procedureCost" th:value="${line.procedureCost}"/>
+                            </td>
+                        </div>
                     </div>
-                </div>
-                <div class="col-md-2">
-                    <div>
-                        <td style="border: 1px solid grey">
-                            <a href="#"
-                               th:text="${line.getComment()}">Comment</a></td>
+                    <div class="col-md-2">
+                        <div>
+                            <td style="border: 1px solid grey">
+                                <input class="form-control transparent-input" type="text" name="comment" th:value="${line.comment}"/>
+                        </div>
                     </div>
-                </div>
+                </form>
             </tr>
+
         </div>
         </tbody>
     </table>
