--- a/src/main/resources/templates/User/singleUser.html
+++ b/src/main/resources/templates/User/singleUser.html
@@ -45,32 +45,30 @@
                     </ul>
                 </li>
             </ul>
-            <!--            <form class="navbar-form navbar-left" role="search">-->
-            <!--                <div class="form-group">-->
-            <!--                    <input type="text" class="form-control" placeholder="Поиск">-->
-            <!--                </div>-->
-            <!--                <button type="submit" class="btn btn-default">Отправить</button>-->
-            <!--            </form>-->
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="/users/new"><i
-                                class="glyphicon glyphicon-plus"></i></a>
-                    </li>
-                    <li>
-                        <a th:href="@{/user/{id}/edit (id = ${user.getUserId()})}"><i
-                                class="glyphicon glyphicon-pencil"></i></a>
-                    </li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Действие</a></li>
-                            <li><a href="#">Другое действие</a></li>
-                            <li><a href="#">Что-то еще</a></li>
-                            <li class="divider"></li>
-                            <li><a href="#">Отдельная ссылка</a></li>
-                        </ul>
-                    </li>
-                </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li>
+                    <a href="/users/new"><i
+                            class="glyphicon glyphicon-plus"></i></a>
+                </li>
+                <li>
+                    <a th:href="@{/user/{id}/edit (id = ${user.getUserId()})}"><i
+                            class="glyphicon glyphicon-pencil"></i></a>
+                </li>
+                <li>
+                    <a th:href="@{/records/user/{id} (id = ${user.getUserId()})}"><i
+                            class="	glyphicon glyphicon-th-list"></i></a>
+                </li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Действие</a></li>
+                        <li><a href="#">Другое действие</a></li>
+                        <li><a href="#">Что-то еще</a></li>
+                        <li class="divider"></li>
+                        <li><a href="#">Отдельная ссылка</a></li>
+                    </ul>
+                </li>
+            </ul>
             </form>
         </div>
     </div>
