--- a/src/main/resources/templates/Record/allRecords.html
+++ b/src/main/resources/templates/Record/allRecords.html
@@ -64,41 +64,62 @@
         <thead>
         <tr>
             <div>
-                <th style="border: 1px solid grey; text-align: center; background-color: #fff0d8" colspan="6" th:text="${record.date}">
-                    Date
+                <th style="border: 0px; background-color: #fff0d8" colspan="2">
+                    <a th:href="@{/records/user/{userId} (userId = ${record.userId}, date = ${record.date}, direction='prev' )}"><i
+                            class="glyphicon glyphicon-arrow-left" style="color: black"></i></a>
+                </th>
+
+                <th style="border: 0px; text-align: center; background-color: #fff0d8" colspan="3"
+                >
+                    <a href="#myModalAccept" data-toggle="modal" data-target="#myModalAccept">
+                        <i class="text" style="color: black" th:text="${record.longDate}"></i></a>
+
+                    <div id="myModalAccept" class="modal fade" tabindex="-1">
+                        <div class="modal-dialog modal-sm">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <button class="close" data-dismiss="modal">х</button>
+                                    <h4 class="modal-title">Выберите дату</h4>
+                                </div>
+                                <div class="modal-body">Дата</div>
+                                <form th:method="GET" th:action="@{/records/user/{userId} (userId = ${record.userId})}">
+                                    <input type="date" id="date" th:name="date" th:value="${record.date}">
+                                    <div class="modal-footer">
+                                        <button class="btn btn-danger" data-dismiss="modal">Отмена</button>
+                                        <button class="btn btn-success" type="submit">Выбрать</button>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+
+                </th>
+
+
+                <th style="border: 0px; text-align: end; background-color: #fff0d8">
+                    <a th:href="@{/records/user/{userId} (userId = ${record.userId}, date = ${record.date}, direction='next')}"><i
+                            class="glyphicon glyphicon-arrow-right" style="color: black"></i></a>
                 </th>
             </div>
         </tr>
         <tr>
-            <div class="col-md-1" style="background-color: #dff0d8">
-                <th style="border: 1px solid grey; background-color: #dff0d8">
-                </th>
-            </div>
-            <div class="col-md-1" style="background-color: #dff0d8; border-bottom: black">
-                <th style="border: 1px solid grey; text-align: center; background-color: #dff0d8">
-                    Время
-                </th>
-            </div>
-            <div class="col-md-3" style="background-color: #dff0d8">
-                <th style="border: 1px solid grey; text-align: center; background-color: #dff0d8">
-                    Имя клиента
-                </th>
-            </div>
-            <div class="col-md-3" style="background-color: #dff0d8">
-                <th style="border: 1px solid grey; text-align: center; background-color: #dff0d8">
-                    Название процедуры
-                </th>
-            </div>
-            <div class="col-md-2" style="background-color: #dff0d8">
-                <th style="border: 1px solid grey; text-align: center; background-color: #dff0d8">
-                    Стоимость
-                </th>
-            </div>
-            <div class="col-md-2" style="background-color: #dff0d8">
-                <th style="border: 1px solid grey; text-align: center; background-color: #dff0d8">
-                    Комментарий
-                </th>
-            </div>
+            <th class="col-md-1" style="border: 1px solid grey; background-color: #dff0d8">
+            </th>
+            <th class="col-md-1" style="border: 1px solid grey; text-align: center; background-color: #dff0d8">
+                Время
+            </th>
+            <th class="col-md-4" style="border: 1px solid grey; text-align: center; background-color: #dff0d8">
+                Имя клиента
+            </th>
+            <th class="col-md-3" style="border: 1px solid grey; text-align: center; background-color: #dff0d8">
+                Название процедуры
+            </th>
+            <th class="col-md-1" style="border: 1px solid grey; text-align: center; background-color: #dff0d8">
+                Стоимость
+            </th>
+            <th class="col-md-2" style="border: 1px solid grey; text-align: center; background-color: #dff0d8">
+                Комментарий
+            </th>
         </tr>
         </thead>
         <tbody class="table-group-divider">
@@ -107,39 +128,31 @@
             <tr th:style="${iterStat.odd}?'background:#EEEEEE':'background:#FFFFFF'">
                 <form th:method="PATCH"
                       th:action="@{/records/user/{userId}/{lineId} (userId = ${line.userId},lineId = ${line.lineId})}">
-                    <div class="col-md-1">
-                        <td style="border: 1px solid grey">
-                            <button class="btn btn-success btn-sm" type="submit">Записать</button>
-                        </td>
-                    </div>
-                    <div class="col-md-1">
-                        <td style="border: 1px solid grey">
-                            <input class="form-control transparent-input" type="text"  name="time"
-                                   th:value="${line.time}" readonly style="border: 0px; box-shadow: none;" th:styleappend ="${iterStat.odd}?'background:#EEEEEE':'background:#FFFFFF'"/>
-                    </div>
-                    <div class="col-md-3">
-                        <td style="border: 1px solid grey">
-
-                            <input class="form-control transparent-input" type="text" name="clientName"
-                                   th:value="${line.clientName}" style="border: 0px; box-shadow: none;" th:styleappend ="${iterStat.odd}?'background:#EEEEEE':'background:#FFFFFF'"/>
-                    </div>
-                    <div class="col-md-3">
-                        <td style="border: 1px solid grey">
-                            <input class="form-control transparent-input" type="text" name="procedureName"
-                                   th:value="${line.procedureName}" style="border: 0px; box-shadow: none;" th:styleappend ="${iterStat.odd}?'background:#EEEEEE':'background:#FFFFFF'"/>
-                        </td>
-                    </div>
-                    <div class="col-md-2">
-                        <td style="border: 1px solid grey">
-                            <input class="form-control transparent-input" type="text" name="procedureCost"
-                                   th:value="${line.procedureCost}" style="border: 0px; box-shadow: none;" th:styleappend ="${iterStat.odd}?'background:#EEEEEE':'background:#FFFFFF'"/>
-                        </td>
-                    </div>
-                    <div class="col-md-2">
-                        <td style="border: 1px solid grey">
-                            <input class="form-control transparent-input" type="text" name="comment"
-                                   th:value="${line.comment}" style="border: 0px; box-shadow: none;" th:styleappend ="${iterStat.odd}?'background:#EEEEEE':'background:#FFFFFF'"/>
-                    </div>
+                    <td style="border: 1px solid grey">
+                        <button class="btn btn-success btn-sm" type="submit">Записать</button>
+                    </td>
+                    <td style="border: 1px solid grey">
+                        <input class="form-control transparent-input" type="text" name="time"
+                               th:value="${line.time}" readonly style="border: 0px; box-shadow: none;"
+                               th:styleappend="${iterStat.odd}?'background:#EEEEEE':'background:#FFFFFF'"/>
+                    <td style="border: 1px solid grey">
+                        <input class="form-control transparent-input" type="text" name="clientName"
+                               th:value="${line.clientName}" style="border: 0px; box-shadow: none;"
+                               th:styleappend="${iterStat.odd}?'background:#EEEEEE':'background:#FFFFFF'"/>
+                    <td style="border: 1px solid grey">
+                        <input class="form-control transparent-input" type="text" name="procedureName"
+                               th:value="${line.procedureName}" style="border: 0px; box-shadow: none;"
+                               th:styleappend="${iterStat.odd}?'background:#EEEEEE':'background:#FFFFFF'"/>
+                    </td>
+                    <td style="border: 1px solid grey">
+                        <input class="form-control transparent-input" type="text" name="procedureCost"
+                               th:value="${line.procedureCost}" style="border: 0px; box-shadow: none;"
+                               th:styleappend="${iterStat.odd}?'background:#EEEEEE':'background:#FFFFFF'"/>
+                    </td>
+                    <td style="border: 1px solid grey">
+                        <input class="form-control transparent-input" type="text" name="comment"
+                               th:value="${line.comment}" style="border: 0px; box-shadow: none;"
+                               th:styleappend="${iterStat.odd}?'background:#EEEEEE':'background:#FFFFFF'"/>
                 </form>
             </tr>
 
